--- a/style.css
+++ b/style.css
@@ -718,62 +718,61 @@
             background: linear-gradient(to bottom, rgba(254, 242, 242, 0.3), transparent), url('assets/images/anatomy.png');
         }
 
-        #caz-koleksiyonu .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/jazz.webp');
-        }
+#caz-koleksiyonu .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/jazz.webp');
+}
 
-        #klasik-muzik .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/classic.webp');
-        }
+#klasik-muzik .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/classic.webp');
+}
 
-        #lecturio .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/lect_back.webp');
-        }
+#lecturio .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/lect_back.webp');
+}
 
-        #nejmhealer .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/nejm.webp');
+#nejmhealer .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/nejm.webp');
+}
 
-        }
-        #accessmedical .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/accmed.webp');
-        }
+#accessmedical .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/accmed.webp');
+}
 
-        #jove-education .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/educa.webp');
-        }
+#jove-education .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/educa.webp');
+}
 
-        #jove-business .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/business.webp');
-        }
+#jove-business .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/business.webp');
+}
 
-        #accessengineering .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/eng.webp');
-        }
+#accessengineering .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/eng.webp');
+}
 
-        #pangram .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/pangram.webp');
-        }
+#pangram .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/pangram.webp');
+}
 
-        #chatpdf .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/chat.webp');
-        }
+#chatpdf .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/chat.webp');
+}
 
-        #biorender .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/bio.webp');
-        }
+#biorender .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/bio.webp');
+}
 
-        #wonders .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/wond.webp');
-        }
+#wonders .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/wond.webp');
+}
 
-        #piri-discovery .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/piri.webp');
-        }
+#piri-discovery .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/piri.webp');
+}
 
-        #transleyt .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/transl.webp');
-        }
-
+#transleyt .flip-back {
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/transl.webp');
+}
         .bg-video-container {
             position: relative;
             overflow: hidden;
