--- a/style.css
+++ b/style.css
@@ -692,108 +692,70 @@
             list-style: none;
         }
 
-        #primal-pictures .flip-back {
-            background: linear-gradient(rgba(254, 242, 242, 0.3)), url('assets/images/anatomy.png');
+        [class$="flip-back"] {
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
+        }
+       
+        #primal-pictures .flip-back {
+            background: linear-gradient(to bottom, rgba(254, 242, 242, 0.3), transparent), url('assets/images/anatomy.png');
         }
 
         #caz-koleksiyonu .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/jazz.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/jazz.webp');
         }
 
         #klasik-muzik .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/classic.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/classic.webp');
         }
 
         #lecturio .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/lect_back.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/lect_back.webp');
         }
 
         #nejmhealer .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/nejm.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/nejm.webp');
         }
+
         #accessmedical .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/accmed.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/accmed.webp');
         }
 
         #jove-education .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/educa.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/educa.webp');
         }
 
         #jove-business .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/business.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/business.webp');
         }
 
         #accessengineering .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/eng.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/eng.webp');
         }
 
         #pangram .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/pangram.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/pangram.webp');
         }
 
         #chatpdf .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/chat.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/chat.webp');
         }
 
         #biorender .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/bio.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/bio.webp');
         }
 
         #wonders .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/wond.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/wond.webp');
         }
 
         #piri-discovery .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/piri.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/piri.webp');
         }
 
         #transleyt .flip-back {
-            background: linear-gradient(rgba(255, 255, 255, 0.5)), url('assets/images/transl.webp');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+  background: linear-gradient(to bottom, rgba(255, 255, 255, 0.5), transparent), url('assets/images/transl.webp');
         }
 
         .bg-video-container {
